# word_converter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  digitator.cpp  digitator.hpp  input_file.txt  main.cpp
